apps/metube/metube.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: metube
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metube
  template:
    metadata:
      labels:
        app: metube
    spec:
      securityContext:
        runAsUser: 1026
        runAsGroup: 1026
        fsGroup: 1026
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: metube
          image: ghcr.io/alexta69/metube:2026.09.27
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          ports:
            - name: web
              containerPort: 8081
          volumeMounts:
            - name: downloads
              mountPath: /downloads
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: downloads
          persistentVolumeClaim:
            claimName: metube-pvc
        - name: tmp
          emptyDir:
            medium: ""
---
apiVersion: v1
kind: Service
metadata:
  name: metube
spec:
  selector:
    app: metube
  ports:
    - protocol: TCP
      port: 8081
      targetPort: web
