apps/metube/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: metube-https
spec:
  hostnames:
    - metube.menia.cc
  parentRefs:
    - name: shared-gateway
      namespace: default
      sectionName: shared-https
  rules:
    - backendRefs:
        - name: metube
          port: 8081
